--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,36 +10,25 @@ services:
     command:
       - --storage.tsdb.retention.time=15d
       - --config.file=/etc/config/prometheus.yml
-      - --storage.tsdb.path=/data
       - --web.enable-lifecycle
-    user: "1000:1000"
     ports:
       - 9090:9090
     volumes:
       - type: bind
-        source: origin/config
-        target: /etc/config
-      - type: bind
-        source: origin/data
-        target: /data
+        source: origin/config/prometheus.yml
+        target: /etc/config/prometheus.yml
   target:
     image: quay.io/prometheus/prometheus:v2.34.0
     command:
       - --storage.tsdb.retention.time=15d
       - --config.file=/etc/config/prometheus.yml
-      - --storage.tsdb.path=/data
       - --web.enable-lifecycle
-      - --web.enable-remote-write-receiver
-    user: "1000:1000"
     ports:
       - 9091:9090
     volumes:
       - type: bind
-        source: target/config
-        target: /etc/config
-      - type: bind
-        source: target/data
-        target: /data
+        source: target/config/prometheus.yml
+        target: /etc/config/prometheus.yml
 
 volumes:
   originData:
